--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,12 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: WetlandsEO
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Our team is working to bring the power of remote sensing to accurately map wetlands, and deliver data-driven insights that supports diverse users in management, conservation and restoration. We hope that you’ll join us in creating a product that accounts for the services that intact wetlands provide to everyone. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: wetlandsEO
